# devagent

./: .devagent.toml.example  .gitignore  README.md  devagent.yaml  pyproject.toml  requirements.txt
ai_dev_agent/: __init__.py  cli.py  git_tools.py  intent_router.py
ai_dev_agent/adr/: adr_manager.py
ai_dev_agent/approval/: __init__.py  approvals.py  policy.py
ai_dev_agent/cli/: __init__.py  commands.py  (+2 more)
benchmarks/: README.md  __init__.py  benchmark_runner.py  providers_config.yaml  run_benchmarks.py  test_cases.py
docs/: metrics.md  react_loop.md
examples/: budgeting_demo.py  gitcode_pr_README.md  gitcode_pr_example.py
tests/: test_adr_manager.py  test_budget_enhancements.py  test_budget_guidance.py  test_cli.py  test_cli_action_provider.py  test_cli_analysis_formatting.py  test_cli_assist.py  test_cli_context_config.py  test_cli_react_executor.py  test_cli_registry_handlers.py  test_cli_utils.py  test_code_editor.py  test_commands.py  test_config.py  test_context.py  test_context_budget_manager.py  test_context_gatherer.py  test_context_pruning_service.py  test_diff_metrics.py  test_diff_utils.py  test_git_tools.py  test_gitcode_pr.py  test_inspector.py  test_intent_router.py  test_llm_provider.py  test_metrics_collectors.py  test_package_exports.py  test_parallel_tools.py  test_patch_analysis.py  test_patch_coverage.py  test_planner.py  test_questions.py  test_react_gate.py  test_reactive_executor.py  test_reasoning.py  test_registry_handlers.py  test_relative_thresholds.py  test_secret_scan.py  test_session_aware_tool_invoker.py  test_session_manager.py  (+9 more)
(+169 files in other folders)
